--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EditActivity"></activity>
-        <activity android:name=".DetailActivity" />
-        <activity android:name=".ListActivity" />
+        <activity
+            android:name=".EditActivity"
+            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".DetailActivity"
+            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".ListActivity" />
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".MainActivity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
